// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBoxInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-bBXrwG hNubub"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 kMXrVt"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fehLih StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
            disabled=""
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 gsfEAF"
              disabled=""
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bVFhef StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fLWnOY"
              disabled=""
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-bBXrwG hNubub"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jrjIPs"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fehLih StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 DlgSN"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bVFhef StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fLWnOY"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders a toggle input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-bBXrwG hNubub"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
      >
        A checkbox
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 cTuErc"
      >
        A helpful message
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jrjIPs"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fehLih StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 DlgSN"
              tabindex="-1"
              type="checkbox"
            />
            <span
              class="StyledCheckBox__StyledCheckBoxToggle-sc-1dbk5ju-4 gFVRYr"
            >
              <span
                class="StyledCheckBox__StyledCheckBoxKnob-sc-1dbk5ju-5 QsFHq"
              />
            </span>
          </div>
          <span>
            Hi friends
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kwoXLv"
      >
        Some info
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-bBXrwG hNubub"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jrjIPs"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fehLih StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 DlgSN"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bVFhef StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fLWnOY"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-bBXrwG hNubub"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 cTuErc"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jrjIPs"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fehLih StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 DlgSN"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bVFhef StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fLWnOY"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-bBXrwG hNubub"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jrjIPs"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fehLih StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 DlgSN"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bVFhef StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fLWnOY"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 boCmmO"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`CheckBoxInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-bBXrwG hNubub"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 jrjIPs"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 fehLih StyledCheckBox-sc-1dbk5ju-6 bXiBYz"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 DlgSN"
              tabindex="-1"
              type="checkbox"
              value="Hi people"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 bVFhef StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 fLWnOY"
            />
          </div>
          <span>
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kwoXLv"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
